Atualizações da Análise de dados SQL

--- a/notebooks/data_analysis_enem2024.ipynb
+++ b/notebooks/data_analysis_enem2024.ipynb
@@ -308,6 +308,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "468602c1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ler cada tabela em um DataFrame\n",
+    "dim_aluno = pd.read_sql_query(\"SELECT * FROM dim_aluno\", conn)\n",
+    "dim_escola = pd.read_sql_query(\"SELECT * FROM dim_escola\", conn)\n",
+    "dim_tempo = pd.read_sql_query(\"SELECT * FROM dim_tempo\", conn)\n",
+    "fato_resultados = pd.read_sql_query(\"SELECT * FROM fato_resultados\", conn)\n",
+    "\n",
+    "# Salvar cada DataFrame como parquet\n",
+    "dim_aluno.to_parquet(\"dim_aluno.parquet\", index=False)\n",
+    "dim_escola.to_parquet(\"dim_escola.parquet\", index=False)\n",
+    "dim_tempo.to_parquet(\"dim_tempo.parquet\", index=False)\n",
+    "fato_resultados.to_parquet(\"fato_resultados.parquet\", index=False)\n",
+    "\n",
+    "print(\"Arquivos parquet criados com sucesso!\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "fe0a9b05",
    "metadata": {},
@@ -317,16 +339,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "494c576b",
    "metadata": {},
    "outputs": [],
    "source": [
     "q1 = \"\"\"\n",
-    "SELECT e.NO_MUNICIPIO_ESC, e.SG_UF_ESC, e.TP_DEPENDENCIA_ADM_ESC,\n",
-    "       AVG((f.NU_NOTA_1 + f.NU_NOTA_2 + f.NU_NOTA_3)/3) AS media_escola\n",
+    "SELECT e.NO_MUNICIPIO_ESC,\n",
+    "       e.SG_UF_ESC,\n",
+    "       e.TP_DEPENDENCIA_ADM_ESC,\n",
+    "       AVG((f.NU_NOTA_CN + f.NU_NOTA_CH + f.NU_NOTA_LC + f.NU_NOTA_MT + f.NU_NOTA_REDACAO)/5) AS media_escola\n",
     "FROM fato_resultados f\n",
     "JOIN dim_escola e ON f.escola_id = e.escola_id\n",
+    "WHERE f.NU_NOTA_CN IS NOT NULL\n",
+    "  AND f.NU_NOTA_CH IS NOT NULL\n",
+    "  AND f.NU_NOTA_LC IS NOT NULL\n",
+    "  AND f.NU_NOTA_MT IS NOT NULL\n",
+    "  AND f.NU_NOTA_REDACAO IS NOT NULL\n",
     "GROUP BY e.NO_MUNICIPIO_ESC, e.SG_UF_ESC, e.TP_DEPENDENCIA_ADM_ESC\n",
     "ORDER BY media_escola DESC\n",
     "LIMIT 1;\n",
@@ -343,14 +372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "id": "533705db",
    "metadata": {},
    "outputs": [],
    "source": [
     "q2 = \"\"\"\n",
     "SELECT a.aluno_id,\n",
-    "       AVG((f.NU_NOTA_1 + f.NU_NOTA_2 + f.NU_NOTA_3)/3) AS media_aluno\n",
+    "       AVG((NU_NOTA_CN + NU_NOTA_CH + NU_NOTA_LC + NU_NOTA_MT + NU_NOTA_REDACAO)/5) AS media_aluno\n",
     "FROM fato_resultados f\n",
     "JOIN dim_aluno a ON f.aluno_id = a.aluno_id\n",
     "GROUP BY a.aluno_id\n",
@@ -369,13 +398,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": null,
    "id": "f38cdcab",
    "metadata": {},
    "outputs": [],
    "source": [
     "q3 = \"\"\"\n",
-    "SELECT AVG((NU_NOTA_1 + NU_NOTA_2 + NU_NOTA_3)/3) AS media_geral\n",
+    "SELECT AVG((NU_NOTA_CN + NU_NOTA_CH + NU_NOTA_LC + NU_NOTA_MT + NU_NOTA_REDACAO)/5) AS media AS media_geral\n",
     "FROM fato_resultados;\n",
     "\"\"\""
    ]
@@ -390,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "7f2df4f2",
    "metadata": {},
    "outputs": [],
@@ -399,7 +428,7 @@
     "\n",
     "q4 = \"\"\"\n",
     "SELECT \n",
-    "    (SUM(CASE WHEN NU_NOTA_1 IS NULL AND NU_NOTA_2 IS NULL AND NU_NOTA_3 IS NULL THEN 1 ELSE 0 END) * 100.0) / COUNT(*) \n",
+    "    (SUM(CASE WHEN NU_NOTA_CN IS NULL AND NU_NOTA_CH IS NULL AND NU_NOTA_LC IS NULL NU_NOTA_MT IS NULL NU_NOTA_REDACAO IS NULL THEN 1 ELSE 0 END) * 100.0) / COUNT(*) \n",
     "    AS perc_ausentes\n",
     "FROM fato_resultados;\n",
     "\"\"\""
@@ -415,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "559871aa",
    "metadata": {},
    "outputs": [],
@@ -433,15 +462,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "id": "2360173b",
    "metadata": {},
    "outputs": [],
    "source": [
     "q6 = \"\"\"\n",
-    "SELECT AVG(NU_NOTA_1) AS media_nota1,\n",
-    "       AVG(NU_NOTA_2) AS media_nota2,\n",
-    "       AVG(NU_NOTA_3) AS media_nota3\n",
+    "SELECT AVG(NU_NOTA_CN) AS media_ciencias_da_Natureza,\n",
+    "       AVG(NU_NOTA_CH) AS media_ciencias_humanas,\n",
+    "       AVG(NU_NOTA_LC) AS media_linguagens_codigos,\n",
+    "       AVG(NU_NOTA_MT) AS media_matematica,\n",
+    "       AVG(NU_NOTA_REDACAO) AS media_redacao\n",
     "FROM fato_resultados;\n",
     "\"\"\""
    ]
@@ -456,14 +487,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "id": "3d6bf833",
    "metadata": {},
    "outputs": [],
    "source": [
     "q7 = \"\"\"\n",
     "SELECT a.TP_SEXO,\n",
-    "       AVG((f.NU_NOTA_1 + f.NU_NOTA_2 + f.NU_NOTA_3)/3) AS media_sexo\n",
+    "       AVG((f.NU_NOTA_CN + f.NU_NOTA_CH + f.NU_NOTA_LC + f.NU_NOTA_MT + f.NU_NOTA_REDACAO)/5) AS media_sexo\n",
     "FROM fato_resultados f\n",
     "JOIN dim_aluno a ON f.aluno_id = a.aluno_id\n",
     "GROUP BY a.TP_SEXO;\n",
@@ -487,7 +518,7 @@
    "source": [
     "q8 = \"\"\"\n",
     "SELECT a.TP_COR_RACA,\n",
-    "       AVG((f.NU_NOTA_1 + f.NU_NOTA_2 + f.NU_NOTA_3)/3) AS media_etnia\n",
+    "       AVG((f.NU_NOTA_CN + f.NU_NOTA_CH + f.NU_NOTA_LC + f.NU_NOTA_MT + f.NU_NOTA_REDACAO)/5) AS media_etnia\n",
     "FROM fato_resultados f\n",
     "JOIN dim_aluno a ON f.aluno_id = a.aluno_id\n",
     "GROUP BY a.TP_COR_RACA;\n",
